add-responsivesness-to-hero

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
     
             <div class="intro-text">
-                View projects I that have worked on below.
+                Scroll down to view projects I that have worked on below.
             </div>
         </div>
 
@@ -41,7 +41,7 @@
             <div class="img-container">
                 <img src="./images/dexters-laboratory-costume.webp" width="250px" height="300px" ="kratos-avatar" />
             </div>
-            <p>I will update this page with my actual picture but for now enjoy this picture of Dexter!</p>
+            <p>I will update this page with my actual picture but, for now, enjoy this picture of Dexter!</p>
         </div>
     </div>
 </body>
