add basic projects section

--- a/index.html
+++ b/index.html
@@ -44,5 +44,12 @@
             <p>I will update this page with my actual picture but, for now, enjoy this picture of Dexter!</p>
         </div>
     </div>
+
+    <div class="projects-section">
+        <h1>Projects</h1>
+        <div class="projects-container">
+            Hello 
+        </div>
+    </div>
 </body>
 </html>
