add all html elements and additional styling to page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="img-container">
                 <img src="./images/dexters-laboratory-costume.webp" width="250px" height="300px" ="kratos-avatar" />
             </div>
-            <p>I will update this page with my actual picture but, for now, enjoy this picture of Dexter!</p>
+            <p>I will update this page with my actual picture eventually but, for now, enjoy this picture of Dexter!</p>
         </div>
     </div>
 
@@ -51,5 +51,25 @@
             Hello 
         </div>
     </div>
+
+    <div class="about-section">
+        <div class="text-container">
+            <h2>About Me</h2>
+            <p>I am currently a senior in high school looking foward to attending the University of Houston in the fall. I do not have any work experience currently,
+                but I would be thrilled for any oppurtunities. If you would like to contact me, scroll below to find my LinkedIn and Email. 
+            </p>
+        </div>
+    </div>
+
+    <div class="contact-section">
+        <div class="logo-container">
+            <i class="fa-brands fa-linkedin fa-4x"></i>
+            <i class="fa-solid fa-envelope fa-4x"></i>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>Created by Shaheer Abbasi. 2024</p>
+    </footer>
 </body>
 </html>
