--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p>
                 I am currently a senior in high school looking foward to attending the University of Houston in the fall. I have always loved coding and my dream is to
                 become a software engineer. I do not have any work experience currently, but I would be thrilled for any oppurtunities. 
-                If you would like to contact me, please send me a message to LinkedIn or email me. Thank you for visiting my page! 
+                If you would like to contact me, please send me a message on LinkedIn or email me. Thank you for visiting my page! 
             </p>
         </div>
     </div>
