add arrow to desktop view port

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <div class="intro-header">
                 Hi there, I am Shaheer Abbasi, an aspiring software engineer!
             </div>
-    
+            <div class="arrow-container">
+                <img src="./images/split-arrow-down.png" width="100px" height="100px" alt="arrow-down" />
+            </div>
             <div class="intro-text">
                 Scroll down to view projects I that have worked on.
             </div>
