update about me

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <div class="text-container">
             <h2>About Me</h2>
             <p>
-                I am currently a senior in high school looking foward to attending the University of Houston in the fall. I have always loved coding and my dream is to
-                become a software engineer. I do not have any work experience currently, but I would be thrilled for any oppurtunities. 
-                If you would like to contact me, please send me a message on LinkedIn or email me. Thank you for visiting my page! 
+                I am currently a Class of 2028 student at the University of Houston. I have always loved coding, and my dream is to become a software engineer. 
+                Though I currently lack work experience, I am eager for any opportunities to learn and grow. If you'd like to get in touch, please message me on LinkedIn or email me. 
+                Thank you for visiting my page! 
             </p>
         </div>
     </div>
